fin cour new leteurs

--- a/dsManewsleter.htm
+++ b/dsManewsleter.htm
@@ -3,6 +3,7 @@
 
 <head>
     <title>Ma NewsLetter Tuto</title>
+    <meta charset="utf8">
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 </head>
 
@@ -12,25 +13,285 @@
 
 <body>
     <!-- ////////// Fond du site ////////// -->
-    <table width="100%" border="1" cellspacing="0" cellpadding="0" bgcolor="#ffddee"> <!-- tableau n°1 -->
+    <table width="100%" border="0" cellspacing="0" cellpadding="0" bgcolor="#ffddee"> <!-- tableau n°1 -->
         <tr>
             <td>
 
                 <!-- ////////// Conteuneur prinsipal ////////// Tableau N°2 -->
-                <table width="785" border="1" cellspacing="0" cellpadding="0" align="center" bgcolor="#FFFFFF">
+                <!-- un second tableau centré avec des dimensions fixes et un fond blanc  -->
+                <table width="785" border="0" cellspacing="0" cellpadding="0" align="center" bgcolor="#FFFFFF">
                     <tr>
                         <!-- bordure gauche -->
                         <td width="30">&nbsp;</td>
                         <!-- la newsletter -->
-                        <td width="725">&nbsp;</td> <!-- newsletter -->
+                        <td width="725">
+
+
+                            <!-- Texte + lien: si vous ne voyer pas ... Cliquer ici   -->
+                            <!-- emmet table[width="100%" boder="0" cellspacing="0" cellpadding="0"]>tr>td[align="center" heitgh="20"]>p>a -->
+                            <table width="100%" boder="0" cellspacing="0" cellpadding="0">
+                                <tr>
+                                    <td align="center" heitgh="20">
+                                        <p style="font-family:'Trebuchet MS', Arial, Helvetica, sans-serif;
+                                            color:#504472; font-size:12px;"> Si vous ne voyez pas correctement
+                                            cet email, veuillez <a href="#" style="color:#504472;">Cliquer ici</a>
+                                        </p>
+                                    </td>
+                                </tr>
+                            </table>
+
+                            <!-- ligne horizontale rouge -->
+                            <!-- une cellule vide avec un fond de couleur -->
+                            <!--emmet table[width="100%" boder="0" cellspacing="0" cellpadding="0"]>tr>td -->
+                            <table width="100%" boder="0" cellspacing="0" cellpadding="0" height="1">
+                                <tr>
+                                    <td height="1" style="background-color: #ff344c;"></td>
+                                </tr>
+                            </table>
+
+                            <!-- logo + menu -->
+                            <table width="100%" boder="0" cellspacing="0" cellpadding="0">
+                                <tr>
+                                    <td width="236">
+                                        <a href="#">
+                                            <img src="img2/logo_img_09.jpg" alt="logo" width="236" height="96"
+                                                border="0">
+                                        </a>
+                                    </td>
+                                    <!-- menu avec image fond -->
+                                    <td background="img2/fond_menue_img_08.JPG " style="background-repeat: no-repeat;">
+
+                                        <!-- epase verticale -->
+                                        <table width="100%" boder="0" cellspacing="0" cellpadding="0">
+                                            <tr>
+                                                <td> <img src="img2/prix-tranparent.gif" width="1" height="55"> </td>
+                                            </tr>
+                                        </table>
+                                        <!--fin epase verticale -->
+                                        <!-- le menu -->
+                                        <table width="100%" boder="0" cellspacing="0" cellpadding="0">
+                                            <tr>
+                                                <td width="155">&nbsp;</td>
+                                                <td>
+                                                    <a href="#"
+                                                        style="text-decoration: none; font-family: 'Trebuchet MS',
+                                                        Arial, Helvetica, sans-serif; color: #504742; font-size: 12px;">
+                                                        les formations
+                                                    </a>
+                                                </td>
+                                                <td width="40">&nbsp;</td>
+                                                <td>
+                                                    <a href="#"
+                                                        style="text-decoration: none; font-family: 'Trebuchet MS',
+                                                        Arial, Helvetica, sans-serif; color: #504742; font-size: 12px;">
+                                                        Le centre
+                                                    </a>
+                                                </td>
+                                                <td width="40">&nbsp;</td>
+                                                <td>
+                                                    <a href="#"
+                                                        style="text-decoration: none; font-family: 'Trebuchet MS',
+                                                        Arial, Helvetica, sans-serif; color: #504742; font-size: 12px;">
+                                                        Financement
+                                                    </a>
+                                                </td>
+                                            </tr>
+                                        </table>
+                                        <!-- fin du menu terminer -->
+
+                                        <!-- espace verticale -->
+                                        <table width="100%" border="0" cellspacing="0" cellpadding="0">
+                                            <tr>
+                                                <td height="50">&nbsp;</td>
+                                            </tr>
+                                        </table>
+                                        <!-- fin espace verticale -->
+
+                                    </td>
+                                </tr>
+                            </table>
+                            <!-- ////////// fin patie header ////////// -->
+
+                            <!-- le titre -->
+                            <table width="100%" border="0" cellspacing="0" cellpadding="0">
+                                <tr>
+                                    <td
+                                        style="text-decoration: none; font-family: 'Trebuchet MS', Arial, Helvetica , sans-serif; color:#E5322D;">
+                                        Trouver la formation qui vous conrrespond
+                                    </td>
+                                </tr>
+                            </table>
+                            <!-- fin de titre -->
+                            <!-- le bandeau photos -->
+                            <table>
+                                <tr>
+                                    <td>
+                                        <a href="#">
+                                            <img src="img2/bandeau_img_01.jpg" width="236" height="175"
+                                                alt=" COMMUNICATON / MARKETING">
+                                        </a>
+                                    </td>
+                                    <td>
+                                        <a href="#">
+                                            <img src="img2/bandeau_img_02.jpg" width="236" height="175"
+                                                alt=" CONCETION / DESIGN ">
+                                        </a>
+                                    </td>
+                                    <td>
+                                        <a href="#">
+                                            <img src="img2/bandeau_img_03.jpg" width="236" height="175"
+                                                alt=" INTEGRATION / DEVELOPPEMENT ">
+                                        </a>
+                                    </td>
+                                </tr>
+                            </table>
+                            <!-- fin bandeau photos -->
+
+                            <!-- espace verticale -->
+                            <table width="100%" border="0" cellspacing="0" cellpadding="0">
+                                <tr>
+                                    <td height="20">&nbsp; </td>
+                                </tr>
+                            </table>
+                            <!-- fin espace verticale -->
+
+                            <!--  Conteneur partie gauche + marge + partie droite -->
+                            <!-- 1 ligne / 2 colonne -->
+                            <table width="100%" border="0" cellspacing="0" cellpadding="0">
+                                <tr>
+                                    <!--partie gauche  -->
+                                    <td width="20">&nbsp;</td>
+                                    <td>
+                                        <p style="font-family: 'Trebuchet MS', Arial, Helvetica , sans-serif;
+                                             color:#E5322D; font-size: 16px;">
+                                            Pourquoi des formations spécialisées <br> dans les metiers du web ?
+                                        </p>
+                                        <p style="font-family: 'Trebuchet MS', Arial, Helvetica , sans-serif; 
+                                            color:#504742; font-size: 12px;"> Parce
+                                            que ce sont de nouveaux <a href="#" style="color: #504742;">métiers</a>
+                                            et qu' ils nécessitent une expertise à toute épreuve :
+                                        </p>
+
+                                        <!-- liste -->
+                                        <ul style="font-family: 'Trebuchet MS', Arial, Helvetica , sans-serif; 
+                                            color:#E5322D; font-size: 12px;">
+                                            <li>
+                                                <strong>Savoureuse</strong>
+                                                <span style="color: #504742;">
+                                                    : Vous etuiez avec gourmendise
+                                                </span>
+                                            </li>
+                                            <li>
+                                                <strong>Personalisée</strong>
+                                                <span style="color: #504742;"> :Vous mixez les
+                                                    <a href="#" style="color: #504742;">outils pédagogiques</a>
+                                                    en fontion de vos besoins
+                                                </span>
+                                            </li>
+                                            <li>
+                                                <strong>professionnelle</strong>
+                                                <span style="color: #504742;">
+                                                    Vous benécifier des consels personaliser de nos
+                                                    <a href="#" style="color: #504742;">formateur exper du web</a>
+                                                </span>
+                                            </li>
+                                            <li>
+                                                <strong>Cartésiens</strong>
+                                                <span style="color: #504742;">
+                                                    : Vous progerser entre les esprits animeau et les vapeur savantes
+                                                </span>
+                                            </li>
+                                        </ul>
+
+                                        <!-- logo guied des formations -->
+                                        <table width="100%" border="0" cellspacing="0" cellpadding="0">
+                                            <tr>
+                                                <td>
+                                                    <a href="#">
+                                                        <img src="img2/bt_guide_img_05.GIF" alt="gide formation"
+                                                            width="236" height="66" />
+                                                    </a>
+                                                </td>
+                                                <td>&nbsp;</td>
+                                            </tr>
+                                        </table>
+                                        <!-- fin logo guied des formations -->
+
+                                    </td>
+                                    <!-- fin partie gauche -->
+
+                                    <!-- marge horizontale -->
+                                    <td width="70"> &nbsp; </td>
+                                    <!-- fin marge horizontale -->
+
+                                    <!-- partie droite -->
+                                    <td width="237" valign="top">
+                                        <table width="100%" border="0" cellspacing="0" cellpadding="0">
+
+                                            <tr>
+                                                <td>
+                                                    <a href="#"><img src="img2/bt_contact_img_04.GIF" width="237"
+                                                            height="128" alt="contact"></a>
+                                                </td>
+                                            </tr>
+
+                                            <tr>
+                                                <td> <a href="#"><img src="img2/bt_question_img_07.GIF" width="237"
+                                                            height="82" alt="pser vos question"></a>
+                                                </td>
+                                            </tr>
+
+                                            <tr>
+                                                <td> <a href="#"><img src="img2/bt_parametre_img_06.GIF" width="237"
+                                                            height="66" alt="Nos partenaire"></a>
+                                                </td>
+                                            </tr>
+
+                                        </table>
+                                    </td>
+                                    <!-- fin partie droite -->
+                                </tr>
+
+                            </table>
+
+                            <!-- footer -->
+                            <table width="100%" border="0" cellspacing="0" cellpadding="0">
+
+                                <tr height="20"> &nbsp; </tr>
+
+                                <tr>
+                                    <td height="1" style="background-color: #ff344c"></td>
+                                </tr>
+
+                                <tr>
+                                    <td align="center" heigt="20" style="font-family: 'Trebuchet MS', Arial, Helvetica , sans-serif; 
+                                        color:#504742; font-size: 12px;">Pour vous désaboner, veuillez
+                                        <a href="#" style="color: #504742;">cliquer ici</a>
+                                    </td>
+                                </tr>
+
+                            </table>
+                            <!-- fin footer -->
+
+                        </td>
+                        <!-- fin newsletter  -->
+
                         <!-- bordure droite -->
                         <td width="30">&nbsp;</td>
                         <!-- fin bordure droite -->
                     </tr>
+
                 </table>
 
+                <table width="100%" border="0" cellspacing="0" cellpadding="0">
+                    <tr>
+                        <td height="200">&nbsp;</td>
+                    </tr>
+                </table>
 
-                <!-- ////////// fin conteneur prinsipal ////////// -->
+                <!-- ////////// fin conteneur prinsipal  ////////// -->
+
+
             </td>
         </tr>
     </table>
