--- a/dsManewsleter.html
+++ b/dsManewsleter.html
@@ -127,7 +127,7 @@
                                 <tr>
                                     <td>
                                         <a href="#">
-                                            <img src="img2/bandeau_img_01.jpg" width="236" height="175"
+                                            <img src="img2/bandeau_img_01.JPG" width="236" height="175"
                                                 alt=" COMMUNICATON / MARKETING">
                                         </a>
                                     </td>
