--- a/dsManewsleter.html
+++ b/dsManewsleter.html
@@ -127,8 +127,8 @@
                                 <tr>
                                     <td>
                                         <a href="#">
-                                            <img src="https://github.com/davidSoutarson/01Newseleteur-exo-autocoretion/blob/master/img2/bandeau_img_01.JPG"
-                                                width="236" height="175" alt=" COMMUNICATON / MARKETING">
+                                            <img src="img2/bandeau_img_01.JPG" width="236" height="175"
+                                                alt=" COMMUNICATON / MARKETING">
                                         </a>
                                     </td>
                                     <td>
