--- a/NewsLetre-Partie2.html
+++ b/NewsLetre-Partie2.html
@@ -211,10 +211,32 @@
                                 </a>
                             </p>
                         </td>
+                        <td width="21">&nbsp;</td>
                     </tr>
-                    <tr></tr>
+                    <tr>
+                        <td heght="15" style="border-bottom: 1px solid #bbbbbb; font-size: 1" colspan="5"> &nbsp;</td>
+                    </tr>
                 </table>
                 <!-- fin contenu 4 -->
+                <!-- dernier tableau :  desabonnement -->
+                <table align="center" width="100%" cellspacing="0" cellpading="0" border="0" bgcolor="#201F23">
+                    <tr>
+                        <td heght="15" colspan="5" style="font-size: 1px;"> &nbsp; </td>
+                    </tr>
+                    <tr>
+                        <td align="center" height="15" colspan="5">
+                            <p style="font-family: Arial,sans-serif; font-size: 11px; color: #b3b3b3; ">
+                                Si vous voulez vous déinscrire,
+                                <a href="#" target="_blank" style="color: #b3b3b3; text-decoration: underline">
+                                    cliquer ici.
+                                </a>
+                            </p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td heght="15" colspan="5" style="font-size: 1px;"> &nbsp;</td>
+                    </tr>
+                </table>
                 <!-- ici on vas enpiler tous les tableaux -->
             </td>
         </tr>
