--- a/NewsLetre-Partie2-Responsive.html
+++ b/NewsLetre-Partie2-Responsive.html
@@ -17,7 +17,7 @@
                 <!-- premier tableau : lien -->
                 <table align="center" width="100%" cellspacing="0" cellpadding="0" border="0" bgcolor="#201f23">
                     <tr>
-                        <td height="15" colspan="5" style="font-size: 1px">&nbsp;</td>
+                        <td height="15" colspan="5" style="font-size:1px">&nbsp;</td>
                     </tr>
                     <tr>
                         <td align="center" height"15" colspan="5">
@@ -41,7 +41,7 @@
                     <tr>
                         <td colspan="5" style="font-size: 1">
                             <img style="border-bottom: 1px solid #888888;" width="100%" border="0" src="img3/haut.jpg"
-                                title="Roger stan" alt=" Roger stan">
+                                title="Roger stan" alt=" Roger stan. je suis 01 img">
                         </td>
                     </tr>
                     <!-- fin rangée du bandeau début espace vertical -->
